feat/ task details modal update

--- a/src/app/View/components/column/column.component.html
+++ b/src/app/View/components/column/column.component.html
@@ -18,11 +18,14 @@
   </div>
 
   @for(task of tasks; track task){
-  <app-task-card
+    <div (click)="modalToggleService.modalToggle('task-details', '', task.title)">
+      <app-task-card
     [taskName]="task.title"
     [subTasksTotal]="task.subtasks.length"
     [subTasksDone]="getSubtasksDone(task)"
   />
+    </div>
+  
   } @empty {
   <app-empty-column />
   }
