--- a/src/app/View/modals/task-details/task-details.component.html
+++ b/src/app/View/modals/task-details/task-details.component.html
@@ -1,5 +1,5 @@
 <div
-  (click)="modalToggleService.modalToggle('task-details', '')"
+(click)="modalToggleService.modalToggle('task-details', '', taskName)"
   class="overflow-y-auto h-full fixed backdrop-blur-sm bg-black bg-opacity-20 top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 scroll-bar-hide"
 >
   <div
@@ -18,7 +18,7 @@
       <div
         class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
       >
-        <h3 class="text-lg font-semibold">Add search endpoints</h3>
+        <h3 class="text-lg font-semibold">{{taskName}}</h3>
 
         <button
           class="add-btn flex items-center border-transparent hover:bg-[#20212c] p-1 lg:rounded-full rounded-xl px-2 hover:opacity-60"
