--- a/src/app/View/components/new-column/new-column.component.html
+++ b/src/app/View/components/new-column/new-column.component.html
@@ -1,5 +1,5 @@
 <main
-(click)="modalToggleService.modalToggle('add-column', 'Add Column')"
+(click)="modalToggleService.modalToggle('add-column', 'Add Column','')"
   class="h-[80vh] mt-[37px] group mb-12 cursor-pointer flex items-center gap-1 justify-center rounded-lg w-72 bg-gradient-to-b"
   [ngClass]="{
     ' from-[#2b2c37] via-[#2b2c37] to-dark-background': themeToggleService.darkTheme,
