--- a/src/app/View/modals/add-column/add-column.component.html
+++ b/src/app/View/modals/add-column/add-column.component.html
@@ -18,7 +18,7 @@
           {{ formTitle }}
         </h3>
         <button
-          (click)="modalToggleService.modalToggle('add-column', 'Add Column')"
+          (click)="modalToggleService.modalToggle('add-column', 'Add Column', '')"
           type="button"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:"
           data-modal-toggle="add-modal"
