--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -18,7 +18,7 @@
         <h3 class="text-lg font-semibold dark:">Add New Task</h3>
         <button
           type="button"
-          (click)="modalToggleService.modalToggle('add-task', '')"
+          (click)="modalToggleService.modalToggle('add-task', '', '')"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:"
           data-modal-toggle="add-modal"
         >
