--- a/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
+++ b/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
@@ -2,7 +2,7 @@
     <ul class=" w-48 p-4 rounded-md shadow-lg "
     [ngClass]="{'bg-dark-background': themeToggleService.darkTheme, 'bg-white': themeToggleService.lightTheme}"
     >
-        <li (click)="modalToggleService.modalToggle('add-column', 'Edit Board')" class="text-gray-400 cursor-pointer hover:opacity-55">Edit Board</li>
+        <li (click)="modalToggleService.modalToggle('add-column', 'Edit Board', '')" class="text-gray-400 cursor-pointer hover:opacity-55">Edit Board</li>
         <li class="text-red-500 cursor-pointer mt-2 hover:opacity-55">Delete Board</li>
     </ul>
 </main>
