feat/ add column / edit board modal updated

--- a/src/app/View/modals/add-column/add-column.component.html
+++ b/src/app/View/modals/add-column/add-column.component.html
@@ -3,12 +3,13 @@
 >
   <div class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
-    <div class="relative  rounded-lg shadow"
-    [ngClass]="{
-      'bg-dark-secondary  ': themeToggleService.darkTheme,
-      'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
-        themeToggleService.lightTheme
-    }"
+    <div
+      class="relative rounded-lg shadow"
+      [ngClass]="{
+        'bg-dark-secondary  ': themeToggleService.darkTheme,
+        'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
+          themeToggleService.lightTheme
+      }"
     >
       <!-- Modal header -->
       <div
@@ -18,7 +19,9 @@
           {{ formTitle }}
         </h3>
         <button
-          (click)="modalToggleService.modalToggle('add-column', 'Add Column', '')"
+          (click)="
+            modalToggleService.modalToggle('add-column', 'Add Column', '')
+          "
           type="button"
           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:"
           data-modal-toggle="add-modal"
@@ -46,9 +49,7 @@
       <form class="p-4 md:p-5">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <div class="col-span-2">
-            <label
-              for="name"
-              class="block mb-2 text-sm font-medium  dark:"
+            <label for="name" class="block mb-2 text-sm font-medium dark:"
               >Name</label
             >
             <input
@@ -56,7 +57,7 @@
               name="name"
               id="name"
               disabled
-              value="Platform Launch"
+              [value]="getBoardName() || initialBoardName"
               class="bg-transparent text-gray-500 border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
               [ngClass]="{
                 'border-[#3e3f4e]': themeToggleService.darkTheme,
@@ -67,19 +68,19 @@
             />
           </div>
 
-          <label
-            for="name"
-            class="block text-sm font-medium  dark:"
+          <label for="name" class="block text-sm font-medium dark:"
             >Columns</label
           >
+
+          @for(column of columns; track columns){
           <div class="col-span-2 flex gap-4">
             <div class="w-96">
               <input
                 type="text"
                 name="name"
                 id="name"
-                value="Todo"
-                class="bg-transparent  border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+                value="{{ column.name }}"
+                class="bg-transparent border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
                 [ngClass]="{
                   'border-[#3e3f4e]': themeToggleService.darkTheme,
                   'border-light-borderline': themeToggleService.lightTheme
@@ -105,74 +106,7 @@
               />
             </svg>
           </div>
-
-          <div class="col-span-2 flex gap-4">
-            <div class="w-96">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                value="Doing"
-                class="bg-transparent  border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
-                [ngClass]="{
-                  'border-[#3e3f4e]': themeToggleService.darkTheme,
-                  'border-light-borderline': themeToggleService.lightTheme
-                }"
-                required=""
-                formControlName="title"
-              />
-            </div>
-
-            <svg
-              class="w-8 h-8 mt-2 text-gray-400 dark:"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2.9"
-                d="M6 18 18 6m0 12L6 6"
-              />
-            </svg>
-          </div>
-
-          <div class="col-span-2 flex gap-4">
-            <div class="w-96">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                value="Done"
-                class="bg-transparent  border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
-                [ngClass]="{
-                  'border-[#3e3f4e]': themeToggleService.darkTheme,
-                  'border-light-borderline': themeToggleService.lightTheme
-                }"
-                required=""
-                formControlName="title"
-              />
-            </div>
-
-            <svg
-              class="w-8 h-8 mt-2 text-gray-400 dark:"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2.9"
-                d="M6 18 18 6m0 12L6 6"
-              />
-            </svg>
-          </div>
+          }
 
           <div class="col-span-2">
             <button
@@ -183,7 +117,7 @@
                 'bg-purple-100 transition-colors duration-300 border-light-borderline':
                   themeToggleService.lightTheme
               }"
-              >
+            >
               Add New Column
             </button>
           </div>
@@ -191,7 +125,7 @@
 
         <button
           type="submit"
-          class=" bg-[#635FC7] text-white hover:bg-indigo-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="bg-[#635FC7] text-white hover:bg-indigo-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
           Save Changes
         </button>
