--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -1,7 +1,10 @@
 <div
+(click)="modalToggleService.modalToggle('add-task', '', '')"
   class="overflow-y-auto h-full fixed backdrop-blur-sm bg-black bg-opacity-20 top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 scroll-bar-hide"
 >
-  <div class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
+  <div
+  (click)="$event.stopPropagation()"
+  class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
     <div
       class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700"
@@ -16,30 +19,7 @@
         class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
       >
         <h3 class="text-lg font-semibold dark:">Add New Task</h3>
-        <button
-          type="button"
-          (click)="modalToggleService.modalToggle('add-task', '', '')"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:"
-          data-modal-toggle="add-modal"
-        >
-          <svg
-            class="w-3 h-3"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 14 14"
-          >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-            />
-          </svg>
-
-          <span class="sr-only">Close modal</span>
-        </button>
+        
       </div>
       <!-- Modal body -->
       <form class="p-4 md:p-5">
