feat/ add colum functionality

--- a/src/app/View/modals/add-column/add-column.component.html
+++ b/src/app/View/modals/add-column/add-column.component.html
@@ -24,7 +24,7 @@
         </h3>
       </div>
       <!-- Modal body -->
-      <form class="p-4 md:p-5">
+      <form class="p-4 md:p-5" [formGroup]="addColumnForm" (ngSubmit)="addColumn()">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <div class="col-span-2">
             <label for="name" class="block mb-2 text-sm font-medium dark:"
@@ -34,15 +34,12 @@
               type="text"
               name="name"
               id="name"
-              disabled
               [value]="crudService.getBoardName() || crudService.initialBoardName"
               class="bg-transparent text-gray-500 border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
               [ngClass]="{
                 'border-[#3e3f4e]': themeToggleService.darkTheme,
                 'border-light-borderline': themeToggleService.lightTheme
               }"
-              required=""
-              formControlName="title"
             />
           </div>
 
@@ -85,6 +82,25 @@
             </svg>
           </div>
           }
+
+         
+            <div class="col-span-2">
+              <div class="w-96">
+                <input
+                  type="text"
+                  name="newColumnName"
+                  id="newColumnName"
+                  class="bg-transparent border-2 border-[#3e3f4e] text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
+                  [ngClass]="{
+                    'border-[#3e3f4e]': themeToggleService.darkTheme,
+                    'border-light-borderline': themeToggleService.lightTheme
+                  }"
+                  placeholder="Enter new column name"
+                  formControlName="columnName"
+                  required
+                />
+              </div>
+            </div>
 
           <div class="col-span-2">
             <button
