feat/ add task functionality

--- a/src/app/View/shareables/task-dropdown/task-dropdown.component.html
+++ b/src/app/View/shareables/task-dropdown/task-dropdown.component.html
@@ -16,7 +16,7 @@
     class="bg-transparent cursor-pointer border-2 text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
     [ngClass]="{'border-[#3e3f4e]': themeToggleService.darkTheme}"
     >
-    {{columns[0].name}}
+    {{crudService.selectedStatus || columns[0].name}}
   </div>
 
   @if(dropdownToggleService.isStatusDropdownShown){
@@ -26,6 +26,7 @@
     >
     @for(column of columns; track columns){
       <li
+      (click)="crudService.getSelectedStatus(column.name)"
         class="text-gray-400 cursor-pointer hover:scale-105 duration-300"
       >
         {{column.name}}
