--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -7,7 +7,7 @@
   class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
     <div
-      class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700"
+      class="relative bg-dark-secondary rounded-lg shadow"
       [ngClass]="{
         'bg-dark-secondary  ': themeToggleService.darkTheme,
         'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
@@ -22,7 +22,7 @@
         
       </div>
       <!-- Modal body -->
-      <form class="p-4 md:p-5">
+      <form class="p-4 md:p-5" [formGroup]="addTaskForm" (ngSubmit)="addTask()">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <div class="col-span-2">
             <label for="name" class="block mb-2 text-sm font-medium dark:"
