--- a/src/app/View/modals/task-details/task-details.component.html
+++ b/src/app/View/modals/task-details/task-details.component.html
@@ -72,7 +72,7 @@
 
       }
 
-        <app-task-dropdown [label]="'Current Status'" />
+        <app-task-dropdown [label]="'Current Status'" [columnName]="taskColumn" />
       </div>
     </div>
   </div>
