--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,6 @@ html, body {
   width: 11px;
   height: 8px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
