feat/ add board functionality

--- a/src/app/View/shareables/task-dropdown/task-dropdown.component.html
+++ b/src/app/View/shareables/task-dropdown/task-dropdown.component.html
@@ -20,7 +20,7 @@
     {{columnName}}
   </div>
   }
-  @else if(crudService.selectedStatus) {
+  @else {
     <div
     (click)="dropdownToggleService.dropdownToggle('status')"
     class="bg-transparent cursor-pointer border-2 text-sm rounded-lg focus:outline-none focus:ring-0 focus:border-[#635FC7] block w-full p-2.5 px-5"
