--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -23,7 +23,7 @@
        
       </div>
       <!-- Modal body -->
-      <form class="p-4 md:p-5" [formGroup]="addBoardForm">
+      <form class="p-4 md:p-5" [formGroup]="addBoardForm" (ngSubmit)="addBoard()">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <div class="col-span-2">
             <label
