--- a/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
+++ b/src/app/View/shareables/edit-board-dropdown/edit-board-dropdown.component.html
@@ -3,6 +3,6 @@
     [ngClass]="{'bg-dark-background': themeToggleService.darkTheme, 'bg-white': themeToggleService.lightTheme}"
     >
         <li (click)="modalToggleService.modalToggle('add-column', 'Edit Board', '')" class="text-gray-400 cursor-pointer hover:opacity-55">Edit Board</li>
-        <li class="text-red-500 cursor-pointer mt-2 hover:opacity-55">Delete Board</li>
+        <li (click)="modalToggleService.modalToggle('delete', '', '')" class="text-red-500 cursor-pointer mt-2 hover:opacity-55">Delete Board</li>
     </ul>
 </main>
