feat/ template modifications

--- a/src/app/View/modals/add-board/add-board.component.html
+++ b/src/app/View/modals/add-board/add-board.component.html
@@ -6,7 +6,7 @@
   (click)="$event.stopPropagation()"
   class="relative p-4 w-full ml-auto mr-auto mt-14 max-w-md max-h-full">
     <!-- Modal content -->
-    <div class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700"
+    <div class="relative bg-dark-secondary rounded-lg shadow "
     [ngClass]="{
       'bg-dark-secondary': themeToggleService.darkTheme,
       'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
@@ -17,7 +17,7 @@
       <div
         class="flex items-center justify-between p-4 md:p-5 rounded-t"
       >
-        <h3 class="text-lg font-semibold  dark:">
+        <h3 class="text-lg font-semibold ">
           Add New Board
         </h3>
        
@@ -56,7 +56,7 @@
 
         <button
           type="submit"
-          class="text-white bg-[#635FC7] hover:bg-indigo-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-[#635FC7] hover:bg-indigo-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center"
         >
           Create New Board
         </button>
