--- a/src/app/View/modals/delete/delete.component.html
+++ b/src/app/View/modals/delete/delete.component.html
@@ -8,7 +8,7 @@
   >
     <!-- Modal content -->
     <div
-      class="relative bg-dark-secondary rounded-lg shadow dark:bg-gray-700"
+      class="relative bg-dark-secondary rounded-lg shadow "
       [ngClass]="{
         'bg-dark-secondary': themeToggleService.darkTheme,
         'bg-light-primary transition-colors duration-300 border-light-borderline text-light-text':
