--- a/src/app/View/modals/add-task/add-task.component.html
+++ b/src/app/View/modals/add-task/add-task.component.html
@@ -16,16 +16,16 @@
     >
       <!-- Modal header -->
       <div
-        class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
+        class="flex items-center justify-between p-4 md:p-5 rounded-t "
       >
-        <h3 class="text-lg font-semibold dark:">Add New Task</h3>
+        <h3 class="text-lg font-semibold ">Add New Task</h3>
         
       </div>
       <!-- Modal body -->
       <form class="p-4 md:p-5" [formGroup]="addTaskForm" (ngSubmit)="addTask()">
         <div class="grid gap-4 mb-4 grid-cols-2">
           <div class="col-span-2">
-            <label for="name" class="block mb-2 text-sm font-medium dark:"
+            <label for="name" class="block mb-2 text-sm font-medium"
               >Title</label
             >
             <input
@@ -44,7 +44,7 @@
           <div class="col-span-2">
             <label
               for="description"
-              class="block mb-2 text-sm font-medium dark:"
+              class="block mb-2 text-sm font-medium "
               >Description</label
             >
             <textarea
