--- a/src/app/View/modals/task-details/task-details.component.html
+++ b/src/app/View/modals/task-details/task-details.component.html
@@ -7,7 +7,7 @@
     class="relative p-4 w-full ml-auto mr-auto mt-44 max-w-lg max-h-full"
   >
     <div
-      class="relative pb-6 rounded-lg shadow dark:bg-gray-700"
+      class="relative pb-6 rounded-lg shadow "
       [ngClass]="{
         'bg-dark-secondary transition-colors duration-300 text-dark-text':
           themeToggleService.darkTheme,
@@ -16,7 +16,7 @@
       }"
     >
       <div
-        class="flex items-center justify-between p-4 md:p-5 rounded-t dark:border-gray-600"
+        class="flex items-center justify-between p-4 md:p-5 rounded-t "
       >
         <h3 class="text-lg font-semibold">{{taskName}}</h3>
 
