--- a/src/app/View/pages/login/login.component.html
+++ b/src/app/View/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="bg-gray-50 pb-44 lg:pb-0 dark:bg-gray-900 lg:flex">
+<section class="bg-gray-50 pb-44 lg:pb-0 lg:flex">
   <img
   src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?q=80&w=1939&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  
   alt=""
@@ -10,7 +10,7 @@
   >
     <a
       href="#"
-      class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
+      class="flex items-center mb-6 text-2xl font-semibold text-gray-900 "
     >
       <img
         class="w-44 h-8 mr-2"
@@ -19,11 +19,11 @@
       />
     </a>
     <div
-      class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
+      class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0 "
     >
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
         <h1
-          class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
+          class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl "
         >
           Sign in to your account
         </h1>
@@ -31,14 +31,14 @@
           <div>
             <label
               for="email"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              class="block mb-2 text-sm font-medium text-gray-900 "
               >Your email</label
             >
             <input
               type="email"
               formControlName="email"
               id="email"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
               placeholder="name@company.com"
               required=""
             />
@@ -46,7 +46,7 @@
           <div>
             <label
               for="password"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+              class="block mb-2 text-sm font-medium text-gray-900 "
               >Password</label
             >
             <input
@@ -54,7 +54,7 @@
               formControlName="password"
               id="password"
               placeholder="••••••••"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
               required=""
             />
           </div>
@@ -65,33 +65,33 @@
                   id="remember"
                   aria-describedby="remember"
                   type="checkbox"
-                  class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
+                  class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300"
                   required=""
                 />
               </div>
               <div class="ml-3 text-sm">
-                <label for="remember" class="text-gray-500 dark:text-gray-300"
+                <label for="remember" class="text-gray-500 "
                   >Remember me</label
                 >
               </div>
             </div>
             <a
               href="#"
-              class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500"
+              class="text-sm font-medium text-primary-600 hover:underline"
               >Forgot password?</a
             >
           </div>
           <button
             type="submit"
-            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+            class="w-full bg-[#635FC7] text-white bg-primary-600 hover:opacity-70 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >
             Sign in
           </button>
-          <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+          <p class="text-sm font-light text-gray-500 ">
             Don’t have an account yet?
             <a
              routerLink="/register"
-              class="font-medium text-primary-600 hover:underline dark:text-primary-500"
+              class="font-medium text-primary-600 hover:underline"
               >Sign up</a
             >
           </p>
