--- a/src/app/View/shareables/multi-input-box/multi-input-box.component.html
+++ b/src/app/View/shareables/multi-input-box/multi-input-box.component.html
@@ -33,7 +33,7 @@
   @if(isDeleteSvgShown || i > 0){
 
   <svg
-    class="w-8 h-8 mt-2 cursor-pointer text-gray-400 dark:text-white"
+    class="w-8 h-8 mt-2 cursor-pointer text-gray-400"
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
     fill="none"
@@ -55,7 +55,7 @@
 
 <div
   (click)="addInputBox()"
-  class="text-[#635FC7] cursor-pointer col-span-2 bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+  class="text-[#635FC7] cursor-pointer col-span-2 bg-white hover:bg-opacity-90 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full w-full text-sm px-5 py-2.5 text-center"
   [ngClass]="{
     'bg-white transition-colors duration-300':
       themeToggleService.darkTheme,
