--- a/src/app/View/pages/home/home.component.html
+++ b/src/app/View/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <main
-  class="w-[115vw]"
+  class="w-[115vw] min-h-[100vh]"
   [ngClass]="{
     'bg-dark-background transition-colors duration-300  text-dark-text':
       themeToggleService.darkTheme,
